#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-24
2017-10-20 Mikhail S. Dubrovin
- improve app/det_ndarr_data_status, add src/EventCodeManager.py
- mark module titles for sphinx doc

Tag: V01-00-23
2017-10-19 Mikhail S. Dubrovin
- add app/det_ndarr_data_status

Tag: V01-00-22
2017-10-13 Mikhail S. Dubrovin
- Jungfrau - add real segment geometry and all masks
	modified:   app/jungfrau_ndarr_dark_proc
	modified:   examples/ex_all_dets.py
	modified:   examples/ex_jungfrau_det.py
	modified:   examples/ex_jungfrau_ipython.py
	modified:   examples/ex_jungfrau_raw_plot.py
	modified:   examples/ex_new_dets.py
	modified:   examples/ex_source_dsname.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	modified:   src/UtilsJungfrau.py

Tag: V01-00-21
2017-10-10 Mikhail S. Dubrovin
- add stuff for Jungfrau in AreaDetector, GlobalUtils, PyDetectorAccess, UtilsJungfrau
- update examples

Tag: V01-00-20
2017-10-02 Mikhail S. Dubrovin
- move methods from app/jungfrau_ndarr_dark_proc to PyDataAccess and PSCalib.GlobalUtils

Tag: V01-00-19
2017-09-27 Mikhail S. Dubrovin
- app/jungfrau_ndarr_dark_proc - add file deployment and loging main messages

Tag: V01-00-18
2017-09-21 Mikhail S. Dubrovin
Recover files lost since Tag: V01-00-14:
	new file:   data/geometry-def-cspad.data
	new file:   data/geometry-def-cspad2x2.data
	new file:   data/geometry-def-pnccd.data
	modified:   doc/ChangeLog
	modified:   doc/web/Makefile
	modified:   doc/web/conf.py
	modified:   doc/web/index.rst
	modified:   examples/ex_all_dets.py
	new file:   examples/ex_gain_meclp5415.py
	new file:   examples/ex_get_calib_constants.py